[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
